[gd_scene load_steps=2 format=3 uid="uid://b2wrelc1otv6p"]

[ext_resource type="Script" path="res://tools/PPDManager/PPDManagerPopup.gd" id="1"]

[node name="PPDManagerPopup" type="Window"]
position = Vector2i(0, 24)
size = Vector2i(600, 500)
exclusive = true
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="Tree" type="Tree" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 7

[node name="ChangeURLButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Change YouTube URL"

[node name="ChangeBackgroundButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Change background image"

[node name="ChangeCoverButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Change cover image"

[node name="DeleteSongButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Delete song"

[node name="ChangeBackgroundFileDialog" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.JPG; Joint3D Photographic Experts Group", "*.PNG; Portable Network Graphics")
show_hidden_files = true

[node name="ChangeCoverFileDialog" type="FileDialog" parent="."]
access = 2
filters = PackedStringArray("*.JPG; Joint3D Photographic Experts Group", "*.PNG; Portable Network Graphics")
show_hidden_files = true

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
size = Vector2i(204, 410)
dialog_text = "Are you sure you want to remove this song? This will delete it from your hard drive. "
dialog_autowrap = true

[connection signal="close_requested" from="." to="." method="hide"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ChangeBackgroundButton" to="ChangeBackgroundFileDialog" method="popup_centered_ratio" binds= [0.5]]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/ChangeCoverButton" to="ChangeCoverFileDialog" method="popup_centered_ratio" binds= [0.5]]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/DeleteSongButton" to="DeleteConfirmationDialog" method="popup_centered"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_DeleteConfirmationDialog_confirmed"]
